--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,7 +8,9 @@
 <h1>Admin</h1>
 
 <div id="logoutContainer" sec:authorize="isAuthenticated()">
-    <a th:href="@{/logout}">Logout</a>
+    <form method="post" th:action="@{/logout}">
+        <input id="logout" type="submit" value="Logout"/>
+    </form>
 </div>
 </body>
 </html>
