--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,9 @@
 </div>
 
 <div id="logoutContainer" sec:authorize="isAuthenticated()">
-    <a th:href="@{/logout}">Logout</a>
+    <form method="post" th:action="@{/logout}">
+        <input id="logout" type="submit" value="Logout"/>
+    </form>
 </div>
 </body>
 </html>
