--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,25 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link href='webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'/>
+    <script defer src="webjars/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<h1>Login to the page</h1>
-<form method="post" th:action="@{/login}">
-    <div id="usernameContainer">
-        <label for="username">Username:</label>
-        <input id="username" name="username" type="text"/>
-    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card border-0 shadow rounded-3 my-5">
+                <div class="card-body p-4 p-sm-5">
+                    <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
 
-    <div id="passwordContainer">
-        <label for="password">Password:</label>
-        <input id="password" name="password" type="password"/>
-    </div>
-    <div th:if="${param.error}">Invalid username or password</div>
+                    <form method="post" th:action="@{/login}">
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="username" name="username" placeholder="Jon" required
+                                   type="text">
+                            <label for="username">Username</label>
+                            <div class="invalid-feedback">
+                                Please enter a username.
+                            </div>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="password" name="password" placeholder="Password"
+                                   required type="password">
+                            <label for="password">Password</label>
+                            <div class="invalid-feedback">
+                                Please enter a password.
+                            </div>
+                        </div>
 
-    <div id="login">
-        <input type="submit" value="login">
-    </div>
-</form>
+                        <div class="d-grid">
+                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">
+                                Sign in
+                            </button>
+                        </div>
+                    </form>
 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
