--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link href='webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'/>
+    <script defer src='webjars/bootstrap/js/bootstrap.bundle.min.js'></script>
 </head>
 <body>
 <div id="secretPageContainer" sec:authorize="hasRole('ROLE_MANAGER')">
