--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link href='webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'/>
-    <script defer src="webjars/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel='stylesheet' th:href='@{/css/login.css}'/>
+    <script defer src='webjars/bootstrap/js/bootstrap.bundle.min.js'></script>
+    <script defer th:src='@{/js/loginValidation.js}'></script>
 </head>
 <body>
 <div class="container">
@@ -14,7 +16,7 @@
                 <div class="card-body p-4 p-sm-5">
                     <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
 
-                    <form method="post" th:action="@{/login}">
+                    <form class="needs-validation" method="post" novalidate th:action="@{/login}">
                         <div class="form-floating mb-3">
                             <input class="form-control" id="username" name="username" placeholder="Jon" required
                                    type="text">
@@ -30,6 +32,10 @@
                             <div class="invalid-feedback">
                                 Please enter a password.
                             </div>
+                        </div>
+
+                        <div class="form-floating mb-3 text-center text-danger" hidden id="invalidUser">
+                            User not found
                         </div>
 
                         <div class="d-grid">
