--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link href='webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'/>
-    <link rel='stylesheet' th:href='@{/css/login.css}'/>
+    <link rel='stylesheet' th:href='@{/css/background.css}'/>
     <script defer src='webjars/bootstrap/js/bootstrap.bundle.min.js'></script>
     <script defer th:src='@{/js/loginValidation.js}'></script>
 </head>
