--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <div class="card border-0 shadow rounded-3 my-5">
                 <div class="card-body px-4 pb-4 pt-3 px-sm-5 pt-sm-4 pb-sm-5">
                     <div class="d-flex justify-content-between" sec:authorize="hasRole('ROLE_MANAGER')">
-                        <a th:href="@{/admin}">Admin Page</a>
+                        <a th:href="@{/admin}">Manager Page</a>
                         <a>Language</a>
                     </div>
 
