feat: tweak login page design

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,11 +34,11 @@
                             </div>
                         </div>
 
-                        <div class="form-floating mb-3 text-center text-danger" hidden id="invalidUser">
+                        <div class="form-floating text-center text-danger" hidden id="invalidUser">
                             User not found
                         </div>
 
-                        <div class="d-grid">
+                        <div class="d-grid mt-4">
                             <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">
                                 Sign in
                             </button>
