--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <div class="card border-0 shadow rounded-3 my-5">
                 <div class="card-body px-4 pb-4 pt-3 px-sm-5 pt-sm-4 pb-sm-5">
                     <div class="d-flex justify-content-between" sec:authorize="hasRole('ROLE_MANAGER')">
-                        <a th:href="@{/admin}">Manager Page</a>
+                        <a th:href="@{/admin}" th:text="#{home.ismanager.link.text}"></a>
                         <a>Language</a>
                     </div>
 
@@ -22,19 +22,19 @@
                         <a>Language</a>
                     </div>
 
-                    <h5 class="card-title text-center mt-4 mb-3 fw-light fs-4">Username:</h5>
+                    <h5 class="card-title text-center mt-4 mb-3 fw-light fs-4" th:text="#{home.username.title}"></h5>
                     <h5 class="card-title text-center fs-5" th:text="${username}"></h5>
-                    <h5 class="card-title text-center mt-5 mb-3 fw-light fs-4">Name:</h5>
+                    <h5 class="card-title text-center mt-5 mb-3 fw-light fs-4" th:text="#{home.name.title}"></h5>
                     <h5 class="card-title text-center fs-5" th:text="${name}"></h5>
-                    <h5 class="card-title text-center mt-5 mb-3 fw-light fs-4">Roles:</h5>
+                    <h5 class="card-title text-center mt-5 mb-3 fw-light fs-4" th:text="#{home.role.title}"></h5>
                     <div th:each="role : ${roles}">
                         <h5 class="card-title text-center fs-5" th:text="${role}"></h5>
                     </div>
 
                     <div class="d-flex justify-content-center mt-5" sec:authorize="isAuthenticated()">
                         <form method="post" th:action="@{/logout}">
-                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">
-                                Sign out
+                            <button class="btn btn-primary btn-login text-uppercase fw-bold" th:text="#{signout.button.message}"
+                                    type="submit">
                             </button>
                         </form>
                     </div>
