--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,34 +14,28 @@
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <div class="card border-0 shadow rounded-3 my-5">
                 <div class="card-body p-4 p-sm-5">
-                    <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
+                    <h5 class="card-title text-center mb-5 fw-light fs-5" th:text="#{login.signin.title}"></h5>
 
                     <form class="needs-validation" method="post" novalidate th:action="@{/login}">
                         <div class="form-floating mb-3">
                             <input class="form-control" id="username" name="username" placeholder="Jon" required
                                    type="text">
-                            <label for="username">Username</label>
-                            <div class="invalid-feedback">
-                                Please enter a username.
-                            </div>
+                            <label for="username" th:text="#{login.username.title}"></label>
+                            <div class="invalid-feedback" th:text="#{login.invalid.username.message}"></div>
                         </div>
                         <div class="form-floating mb-3">
                             <input class="form-control" id="password" name="password" placeholder="Password"
                                    required type="password">
-                            <label for="password">Password</label>
-                            <div class="invalid-feedback">
-                                Please enter a password.
-                            </div>
+                            <label for="password" th:text="#{login.password.title}"></label>
+                            <div class="invalid-feedback" th:text="#{login.invalid.password.message}"></div>
                         </div>
 
-                        <div class="form-floating text-center text-danger" hidden id="invalidUser">
-                            User not found
-                        </div>
+                        <div class="form-floating text-center text-danger" hidden id="invalidUser"
+                             th:text="#{login.invalid.user.message}"></div>
 
                         <div class="d-grid mt-4">
-                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">
-                                Sign in
-                            </button>
+                            <button class="btn btn-primary btn-login text-uppercase fw-bold" th:text="#{login.signin.button.message}"
+                                    type="submit"></button>
                         </div>
                     </form>
 
