--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,20 +6,27 @@
     <link href='webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'/>
     <link rel='stylesheet' th:href='@{/css/background.css}'/>
     <script defer src='webjars/bootstrap/js/bootstrap.bundle.min.js'></script>
+    <script defer th:src='@{/js/localisation.js}'></script>
 </head>
 <body>
 <div class="container">
+    <sec:authorize access="hasRole('ROLE_MANAGER')" var="isManager"></sec:authorize>
+
     <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <div class="card border-0 shadow rounded-3 my-5">
                 <div class="card-body px-4 pb-4 pt-3 px-sm-5 pt-sm-4 pb-sm-5">
-                    <div class="d-flex justify-content-between" sec:authorize="hasRole('ROLE_MANAGER')">
-                        <a th:href="@{/admin}" th:text="#{home.ismanager.link.text}"></a>
-                        <a>Language</a>
-                    </div>
-
-                    <div class="d-flex justify-content-end" sec:authorize="!hasRole('ROLE_MANAGER')">
-                        <a>Language</a>
+                    <div class="row">
+                        <div class="col-6 col-sm-5"
+                             th:switch="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}">
+                            <a th:case="${true}" th:href="@{/admin}" th:text="#{home.ismanager.link.text}"></a>
+                            <div th:case="${false}"></div>
+                        </div>
+                        <div class="col-2 col-xs-6 col-sm-3"></div>
+                        <select class="col form-select" id="languageSelection">
+                            <option th:text="#{language.en}" th:value="#{language.option.value.en}"></option>
+                            <option th:text="#{language.zh}" th:value="#{language.option.value.zh}"></option>
+                        </select>
                     </div>
 
                     <h5 class="card-title text-center mt-4 mb-3 fw-light fs-4" th:text="#{home.username.title}"></h5>
@@ -33,7 +40,8 @@
 
                     <div class="d-flex justify-content-center mt-5" sec:authorize="isAuthenticated()">
                         <form method="post" th:action="@{/logout}">
-                            <button class="btn btn-primary btn-login text-uppercase fw-bold" th:text="#{signout.button.message}"
+                            <button class="btn btn-primary btn-login text-uppercase fw-bold"
+                                    th:text="#{signout.button.message}"
                                     type="submit">
                             </button>
                         </form>
