--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
+<html th:lang="${#locale.language}" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
@@ -10,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <sec:authorize access="hasRole('ROLE_MANAGER')" var="isManager"></sec:authorize>
+    <input id="locale" th:value="${#locale.language}" type="hidden"/>
 
     <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
